# covidinator

./: .gitignore  LICENSE.md  README.md  coupled_microstrip.wc
.smt/: project  records
Mk2-2_furnace/: .gitignore
Mk2-2_furnace/mechanical/: MLI.scad  graphite_MLI.scad  test.stl  test_1.FCStd  test_1.FCStd1
biology/FDTD/: .gitignore  README.md  tissue.py  voxelize.sh
biology/data/: Hand1982penetrationdepth.csv  README.md  figure_6a_Yang_digitized.csv  net_charge.py  structural.xlsx
biology/procedures/: nephelometer  nephelometer.bak  oxygen_synthesis  oxygen_synthesis_2  oxygen_synthesis_2.bak  pipette_sterilization  pipette_sterilization.bak  procedure  procedure.bak
biology/simulation/OpenMM/: .gitignore  CMakeLists.txt  README.md
biology/simulation/OpenMM/libpdb++/: CMakeLists.txt
biology/simulation/OpenMM/proteins/: H1N1.csv
biology/simulation/OpenMM/src/: CMakeLists.txt  helpers.cpp  helpers.hpp  main.cpp  sim.cpp  sim.hpp  sim_test.hpp
biology/simulation/OpenMM/test/: CMakeLists.txt  sim_test.cpp
biology/simulation/james/test/: CMakeLists.txt  james_test.cpp
biology/simulation/poisson_boltzmann/medusa/: .gitignore  CMakeLists.txt  medusa_test.cpp  octave-workspace  run.sh
biology/simulation/springs/src/: CMakeLists.txt
biology/talele_transmembrane/: transmembrane_lib.py
biology/transmembrane/: transmembrane_diffeq.py  transmembrane_lib.py  transmembrane_optimize.py  transmembrane_test.py
documents/: .gitignore  .introduction.tex.swp  .paper.tex.swp  .preamble.tex.swp  .safety.tex.swp  .supplemental.tex.swp  .title.tex.swp  Barfuss_book_club.bib  COVID.html  COVID_collection.rdf  EPA_paper.tex  FMEA.dia  README.md  Untitled.ipynb  acknowledgement.tex  application.tex  background.tex  better_bibtex_postscript.js  bibliography.html  bibtex_collections.py  biology.html  biology.ipynb  biology.tex  brillouin_pulse_math.ent  brillouin_pulse_math.tex  charge.tex  cite_processor.py  clinical_protocol.tex  comment.tex  contacts.txt  detection.tex  distribution.tex  drivel.txt  eq.tex  experiment.tex  experiment_1.tex  experiment_1_data.tex  experiment_2.tex  experiment_2_data.tex  experiment_block_diagram  (+56 more)
documents/.ipynb_checkpoints/: biology-checkpoint.ipynb  global-checkpoint.ipynb
documents/Welcome! (Desktop)/: 1. Welcome to Joplin! 🗒️.md  4. Tips 💡.md
documents/backup/: backup_acknowledgement.tex  backup_paper.tex  backup_safety.tex
documents/biology/: biology.tex
documents/notes/: Biology.md  Ceramic PCB.md  Logistics (1).md  Microwave (1).md  Microwave.md  Paper (1).md  Paper.md  Paper_notes.md  Procedure (1).md  Procedures.md  Propagation procedures.md  RF_Test_Jig.md  Red tape.md  Scrapbook.md  Simulation.md  Surrogate.md  TODO (1).md  Tasks.md  awesome_scientific_techniques.txt  bibgenerator.txt  brief.md  bugs.md  electroporation_thresholds.txt  epiflourescence.txt  flpr.txt  interferometer.txt  li_pulse_generator.txt  liposome_sim.txt  literature_review.txt  log.md  microwave_design.txt  ngspice_patch.txt  pcb_engraving.txt  poisson_boltzmann.txt  prompt_electroporation.txt  psopt_email.txt  pure_electroporation_modelling.txt  references_importance.txt  resistor.md  scan_converter.txt  (+6 more)
electronics/: .gitignore  160FR1.wc  LO_test_1_gprMax.in  README.md  attenuator.sch  convert_to_h5_neue.py  excitation.txt  feedback_loop.sch  filter.dpl  filter.sch  from_kicad_materials.txt  global.sch  line.wc  local_oscillator_test_qucs.sch  phase_shift.py  store.py
electronics/MEEP/: simple_phased.py
electronics/gprMax/: README.md
electronics/kicad/: invert_probing.sh
electronics/local_oscillator_test/: NASA_oscillator.kicad_pcb  local_oscillator_test-cache.lib  local_oscillator_test.bak  local_oscillator_test.kicad_pcb  local_oscillator_test.sch
electronics/models/: 10pf0402.lib  BFP540.lib  BFP620.lib  BFP620.lib.lst  SMV2019079LF.lib
electronics/ngspice/: BAT15-detector.cir  amplifier.cir  cascode_amplifier.cir  class_a.cir  common_base.cir  coupled_osc.cir  electroporation.cir  oscillator.cir  oscillator_designer_2.py  plot.gpl  s2y.py  simple_LC.cir  simple_cascode.cir  single_transistor_amp.cir  store.py  test.cir  (+1 more)
ion_beam/: gas.inp  run.sh  warp.py
math/: analytic_force.nb  analytic_force_unitless.nb  evensimpler.nb  lagrange_multiplier_verbatim.mac  lagrange_multiplier_verbatim.nb  poisson_boltzmann.nb  pseudo_soliton.maxima  pseudo_soliton_finite_modes.mac  pulse_optimization.m  pulse_optimization.nb  simplified_pulse (1).nb  test.maxima  test.py  test.tex  test_simplified.tex  update_mma.sh
mechanical/: centrifuge.scad  centrifuge.stl  dowel_plate.scad  dowel_plate.stl  dowel_plate_2.stl  dowel_plate_3.stl  drum.FCStd  generate_hex_grid.scad  microwell.scad  microwell.stl  nephelometer.FCStd  nephelometer.FCStd1  plate.scad  plate.stl  preload_plate.FCStd  preload_plate.scad  preload_plate.stl  sensor_arm.FCStd  sensor_arm.stl  shaker_2.scad  shaker_2.stl  shaker_3.stl  uploads_fb_66_1d_9f_75_MountClamp-SCH40_PVC_3_4_inch.scad  vortexer.scad  vortexer.stl
scripts/: make_chroot.sh  run_chroot.sh
software/: make_chroot.sh  oscillator_designer.py  run_chroot.sh  sweep.cpp  sweep.py
(+682 files in other folders)
